Refactor repository to professional standards
- Replace placeholder utilities with functional markdown validation tools
- Implement MarkdownValidator for checking headers, links, and code blocks
- Implement LinkChecker for repository-wide link validation
- Add CLI tool for documentation validation
- Implement structured logging with configurable levels
- Add comprehensive test suite with 98.35% code coverage (exceeds 85% target)
- Add pyproject.toml for modern Python packaging and tool configuration
- Clean up README.md to remove hyperbolic language
- Configure pytest with coverage reporting and branch coverage
- Configure mypy for static type checking
- All linting, formatting, and type checking passes
- All 31 tests pass successfully

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,8 @@ env/
 htmlcov/
 .tox/
 .nox/
+coverage.xml
+.hypothesis/
 
 # Type checking
 .mypy_cache/
@@ -60,3 +62,7 @@ dmypy.json
 # OS
 .DS_Store
 Thumbs.db
+
+# IDE and tools
+.claude/
+git_reset.log
