--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,6 @@
 # Pre-commit hooks configuration
 # See https://pre-commit.com for more information
+# Follows bordenet Python Style Guide conventions
 
 repos:
   # General file checks
@@ -19,7 +20,21 @@ repos:
       - id: mixed-line-ending
         args: ['--fix=lf']
 
-  # Python code formatting and linting
+  # Python code formatting with black (line-length=120 per style guide)
+  - repo: https://github.com/psf/black
+    rev: 24.1.1
+    hooks:
+      - id: black
+        args: ['--line-length=120']
+
+  # Python import sorting (profile=black, line-length=120)
+  - repo: https://github.com/pycqa/isort
+    rev: 5.13.2
+    hooks:
+      - id: isort
+        args: ['--profile', 'black', '--line-length', '120']
+
+  # Python code linting with flake8
   - repo: https://github.com/pycqa/flake8
     rev: 7.0.0
     hooks:
@@ -31,17 +46,3 @@ repos:
           - flake8-simplify>=0.21.0
           - pep8-naming>=0.13.0
         args: ['--config=.flake8']
-
-  # Python import sorting
-  - repo: https://github.com/pycqa/isort
-    rev: 5.13.2
-    hooks:
-      - id: isort
-        args: ['--profile', 'black', '--line-length', '100']
-
-  # Python code formatting with black
-  - repo: https://github.com/psf/black
-    rev: 24.1.1
-    hooks:
-      - id: black
-        args: ['--line-length', '100']
