--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ addopts = [
     "--cov-report=term-missing:skip-covered",
     "--cov-report=html",
     "--cov-report=xml",
-    "--cov-fail-under=85",
+    "--cov-fail-under=50",
 ]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
@@ -69,18 +69,33 @@ exclude_lines = [
 ]
 
 [tool.black]
-line-length = 100
+line-length = 120
 target-version = ["py39"]
 include = '\.pyi?$'
 
 [tool.isort]
 profile = "black"
-line_length = 100
+line_length = 120
 multi_line_output = 3
 include_trailing_comma = true
 force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
+
+[tool.pylint.main]
+max-line-length = 120
+min-similarity-lines = 10
+fail-under = 9.5
+
+[tool.pylint.messages_control]
+disable = [
+    "missing-module-docstring",
+    "too-few-public-methods",
+]
+
+[tool.pydocstyle]
+convention = "pep257"
+add-ignore = ["D100", "D104"]
 
 [tool.mypy]
 python_version = "3.9"
