--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,10 @@
 # Development dependencies
+# Follows bordenet Python Style Guide conventions
 -r requirements.txt
+
+# Code formatting (line-length=120)
+black>=24.1.0
+isort>=5.13.0
 
 # Code quality and linting
 flake8>=7.0.0
@@ -8,13 +13,15 @@ flake8-bugbear>=24.0.0
 flake8-comprehensions>=3.14.0
 flake8-simplify>=0.21.0
 pep8-naming>=0.13.0
+pylint>=3.0.0
+pydocstyle>=6.3.0
 
 # Pre-commit hooks
 pre-commit>=3.5.0
 
-# Testing (for future use)
+# Testing
 pytest>=8.0.0
 pytest-cov>=4.1.0
 
-# Type checking (for future use)
+# Type checking
 mypy>=1.8.0
